# ga-differential-evolution

./: CHANGELOG.rst  Dockerfile  Makefile  README.md  config.yml  docker-compose.yml  entrypoint.sh  mkdocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
data/results/: 2019_09_13_16_30_svm_model_res.txt  2019_09_13_16_30_svm_params_res.txt  2019_09_13_16_30_svm_val_res.txt
data_tests/data/: data_classification.csv  servo_min_max.csv
data_tests/data/results/: result_models_rf_res.txt  result_params_rf_res.txt  result_preds_rf_res.txt
data_tests/models/: tfidf_model.pkl
de_GA/: constants.py  differential_evolution.py  run.py
de_GA/training_data/: loading.py  training_data.py
de_GA/training_data/formats/: readerwriter.py  soft.py
differential_evolution_GA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: index.md
docs/api_reference/: cloud_persist.md  component_configuration.md  data_format.md  http_api.md  python_api.md  running_docker.md  running_server.md
docs/develop_docs/: custom_components.md
docs/user_docs/: entities.md  fallback.md  faq.md
samples/: config_defaults.yml  config_pre_pipeline.yml  sample_config.yml
