# pytest pycodestyle configuration
[tool:pytest]
codestyle_max_line_length = 100
# ignoring W504: line break occurred after a binary operator
codestyle_ignore =
    W504
codestyle_exclude =
    docs/conf.py

[metadata]
description-file = README.md

[flake8]
exclude = .git,*migrations*
max-line-length = 119